--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>de.knutwalker</groupId>
   <artifactId>netty-vbuf</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>netty-vbuf</name>
@@ -170,6 +168,7 @@
     <connection>scm:git:https://github.com/knutwalker/netty-vbuf.git</connection>
     <developerConnection>scm:git:git@github.com:knutwalker/netty-vbuf.git</developerConnection>
     <url>http://github.com/knutwalker/netty-vbuf</url>
+    <tag>HEAD</tag>
   </scm>
   <licenses>
     <license>
