--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>de.knutwalker</groupId>
     <artifactId>netty-vbuf</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>netty-vbuf</name>
@@ -183,7 +183,7 @@
         <connection>scm:git:https://github.com/knutwalker/netty-vbuf.git</connection>
         <developerConnection>scm:git:git@github.com:knutwalker/netty-vbuf.git</developerConnection>
         <url>http://github.com/knutwalker/netty-vbuf</url>
-        <tag>v0.1.4</tag>
+        <tag>HEAD</tag>
     </scm>
     <licenses>
         <license>
