require travis for mergify

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,6 +2,7 @@ pull_request_rules:
   - name: automatic merge for Dependabot pull requests (preview)
     conditions:
       - author=dependabot-preview[bot]
+      - status-success=continuous-integration/travis-ci/pr
       - base=master
     actions:
       merge:
@@ -10,6 +11,7 @@ pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot[bot]
+      - status-success=continuous-integration/travis-ci/pr
       - base=master
     actions:
       merge:
